# xmonad-tom

./: LICENSE  XMBuild  stack.yaml  xmonad-tom.cabal
desktop/: Desktop.hs  Main.hs
laptop/: Laptop.hs  Main.hs
src/: Main.hs
src/XMonad/: Tom.hs
src/XMonad/Tom/: Workspace.hs  XMobar.hs  XMobarHs.hs
src/XMonad/Tom/UI/: Dialog.hs
src/XMonad/Tom/Workspace/: History.hs  Select.hs
