name:                xmonad-tom
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/xmonad-tom#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:     src
  exposed-modules:
    XMonad.Tom
    XMonad.Tom.UI.Dialog
    XMonad.Tom.Workspace
    XMonad.Tom.Workspace.History
    XMonad.Tom.Workspace.Select
    XMonad.Tom.XMobarHs
  build-depends:      base >= 4.7 && < 5
                    , xmonad
                    , xmonad-contrib
                    , containers
                    , X11
                    , mtl
                    , directory
                    , filepath
                    , rosezipper
  ghc-options:
    -O2
  default-language:   Haskell2010

executable xmonad-desktop
  hs-source-dirs:   desktop
  main-is:          Desktop.hs
  build-depends:    base
                  , xmonad-tom
                  , xmonad
                  , xmonad-contrib
                  , mtl
                  , containers
                  , rosezipper
  default-language: Haskell2010

executable xmonad-laptop
  hs-source-dirs:    laptop, desktop
  main-is:           Laptop.hs
  build-depends:     base
                   , xmonad-tom
                   , xmonad
                   , xmonad-contrib
                   , containers
                   , mtl
                   , rosezipper
  default-language: Haskell2010
